@@ -52,6 +52,7 @@ S3method(makeRLearner,classif.PART)
 S3method(makeRLearner,classif.ada)
 S3method(makeRLearner,classif.blackboost)
 S3method(makeRLearner,classif.boosting)
+S3method(makeRLearner,classif.cforest)
 S3method(makeRLearner,classif.ctree)
 S3method(makeRLearner,classif.fnn)
 S3method(makeRLearner,classif.gbm)
@@ -142,6 +143,7 @@ S3method(predictLearner,classif.PART)
 S3method(predictLearner,classif.ada)
 S3method(predictLearner,classif.blackboost)
 S3method(predictLearner,classif.boosting)
+S3method(predictLearner,classif.cforest)
 S3method(predictLearner,classif.ctree)
 S3method(predictLearner,classif.fnn)
 S3method(predictLearner,classif.gbm)
@@ -268,6 +270,7 @@ S3method(trainLearner,classif.PART)
 S3method(trainLearner,classif.ada)
 S3method(trainLearner,classif.blackboost)
 S3method(trainLearner,classif.boosting)
+S3method(trainLearner,classif.cforest)
 S3method(trainLearner,classif.ctree)
 S3method(trainLearner,classif.fnn)
 S3method(trainLearner,classif.gbm)
